practice/ingress-nginx/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-2048
spec:
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2048
